--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-three/fiber": "^8.17.12",
     "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.59",
     "@studio-freight/lenis": "^1.0.42",
     "@types/three": "^0.172.0",
     "aatjs": "^0.0.4",
